[gd_scene load_steps=8 format=3 uid="uid://xvvxl6iet160"]

[ext_resource type="Script" path="res://scenes/global/volume_control.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://chxo6t0axuh8c" path="res://assets/volchange.wav" id="2_rdxy1"]

[sub_resource type="Gradient" id="Gradient_o4urd"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8lnya"]
gradient = SubResource("Gradient_o4urd")

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2u8gf"]
gradient = SubResource("Gradient_o4urd")

[sub_resource type="LabelSettings" id="LabelSettings_f66a7"]
line_spacing = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_oved7"]
font_size = 18
outline_size = 1

[node name="Volume" type="ColorRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -130.0
offset_right = 75.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
color = Color(0.145098, 0.145098, 0.164706, 0.882353)
script = ExtResource("1")

[node name="Bars" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spesifics" type="HBoxContainer" parent="Bars"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75

[node name="Music" type="VBoxContainer" parent="Bars/Spesifics"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = -5

[node name="TextureProgressBar" type="TextureProgressBar" parent="Bars/Spesifics/Music"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 0.45
fill_mode = 3
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_8lnya")
texture_progress = SubResource("GradientTexture1D_2u8gf")
tint_under = Color(0.0352941, 0.0352941, 0.0352941, 0.490196)
tint_progress = Color(0, 0.505882, 1, 1)

[node name="Percentage" type="Label" parent="Bars/Spesifics/Music"]
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_f66a7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Bars/Spesifics/Music"]
layout_mode = 2
text = "MUSIC"
label_settings = SubResource("LabelSettings_oved7")
horizontal_alignment = 1

[node name="SFX" type="VBoxContainer" parent="Bars/Spesifics"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = -5

[node name="TextureProgressBar" type="TextureProgressBar" parent="Bars/Spesifics/SFX"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 0.45
fill_mode = 3
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_8lnya")
texture_progress = SubResource("GradientTexture1D_2u8gf")
tint_under = Color(0.0352941, 0.0352941, 0.0352941, 0.490196)
tint_progress = Color(0, 0.505882, 1, 1)

[node name="Percentage" type="Label" parent="Bars/Spesifics/SFX"]
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_f66a7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Bars/Spesifics/SFX"]
layout_mode = 2
text = "SFX"
label_settings = SubResource("LabelSettings_oved7")
horizontal_alignment = 1

[node name="Master" type="VBoxContainer" parent="Bars"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = -5

[node name="TextureProgressBar" type="TextureProgressBar" parent="Bars/Master"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 0.45
fill_mode = 3
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_8lnya")
texture_progress = SubResource("GradientTexture1D_2u8gf")
tint_under = Color(0.0352941, 0.0352941, 0.0352941, 0.490196)
tint_progress = Color(0, 0.505882, 1, 1)

[node name="Percentage" type="Label" parent="Bars/Master"]
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_f66a7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Bars/Master"]
layout_mode = 2
text = "MASTER"
label_settings = SubResource("LabelSettings_oved7")
horizontal_alignment = 1

[node name="TimeoutBar" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(35, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 1.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_8lnya")
texture_progress = SubResource("GradientTexture1D_2u8gf")
tint_under = Color(0.0352941, 0.0352941, 0.0352941, 0.490196)
tint_progress = Color(0, 0.505882, 1, 1)

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rdxy1")
bus = &"Music"

[node name="Timeout" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="mouse_entered" from="." to="." method="change_focus" binds= [true]]
[connection signal="mouse_exited" from="." to="." method="change_focus" binds= [false]]
[connection signal="mouse_entered" from="Bars/Spesifics/Music" to="." method="change_cur_bus" binds= [1]]
[connection signal="mouse_entered" from="Bars/Spesifics/SFX" to="." method="change_cur_bus" binds= [2]]
[connection signal="mouse_entered" from="Bars/Master" to="." method="change_cur_bus"]
[connection signal="timeout" from="Timeout" to="." method="change_visibility" binds= [false]]
